--- a/index.ipynb
+++ b/index.ipynb
@@ -144,13 +144,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "italy = 'Italy' # 'Italy'"
+    "italy = 'Italy'\n",
+    "italy # 'Italy'"
    ]
   },
   {
