--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = 'kin'\n",
     "kindof_neighbors"
    ]
   },
