Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,11 +202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'kindof_neighbors'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors = 'kin'\n",
+    "kindof_neighbors = 'kindof_neighbors'\n",
     "kindof_neighbors"
    ]
   },
