--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append('Malta\n",
+    "                ') # add code here"
    ]
   },
   {
