--- a/index.ipynb
+++ b/index.ipynb
@@ -237,12 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Malta\n",
-    "                ') # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
@@ -258,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.appende (# add code here"
    ]
   },
   {
